--- a/popup.html
+++ b/popup.html
@@ -1,15 +1,15 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Web Scraper to JSONL</title>
+  <title>Build this with goose</title>
   <style>
     body { width: 300px; padding: 10px; }
     button { margin-top: 10px; }
   </style>
 </head>
 <body>
-  <h1>Web Scraper to JSONL</h1>
-  <button id="scrapeButton">Scrape Page</button>
+  <h1>Build this with goose</h1>
+  <button id="scrapeButton">Launch goose from this chat</button>
   <div id="result"></div>
   <script src="popup.js"></script>
 </body>
