--- a/popup.html
+++ b/popup.html
@@ -2,14 +2,11 @@
 <html>
 <head>
   <title>Build this with goose</title>
-  <style>
-    body { width: 300px; padding: 10px; }
-    button { margin-top: 10px; }
-  </style>
+  <!-- Inline styles applied directly to elements -->
 </head>
-<body>
-  <h1>Build this with goose</h1>
-  <button id="scrapeButton">Launch goose from this chat</button>
+<body style="width: 400px; margin: 0 auto;">
+  <h1 style="color: #4A90E2; text-align: center; font-family: Arial, sans-serif; font-size: 24px;">build this with goose</h1>
+  <button id="scrapeButton" style="background-color: #4A90E2; color: white; border-radius: 5px; padding: 15px 20px; border: none; box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1); cursor: pointer; display: block; margin: 20px auto;">Launch goose</button>
   <div id="result"></div>
   <script src="popup.js"></script>
 </body>
