--- a/popup.html
+++ b/popup.html
@@ -8,7 +8,7 @@
   <h1 style="color: #4A90E2; text-align: center; font-family: Arial, sans-serif; font-size: 24px;">build this with goose</h1>
   <button id="scrapeButton" style="background-color: #4A90E2; color: white; border-radius: 5px; padding: 15px 20px; border: none; box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1); cursor: pointer; display: block; margin: 20px auto;">Work on this app in goose</button>
   <div id="result"></div>
-  <button id="askGooseButton" style="background-color: #FFAA00; color: white; border-radius: 5px; padding: 15px 20px; border: none; box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1); cursor: pointer; display: block; margin: 20px auto;">Bring back to chat</button>
+  <button hidden:true id="askGooseButton" style="background-color: #FFAA00; color: white; border-radius: 5px; padding: 15px 20px; border: none; box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1); cursor: pointer; display: block; margin: 20px auto;">Bring back to chat</button>
   <script src="popup.js"></script>
 </body>
 </html>
